SCHU-41 refactoring all parsers